# rl-traffic-control

./: .gitignore  LICENSE  README.md  RESEARCH_NOTED.md  demo.py  main.py  plot_results.py  pyproject.toml  sitecustomize.py  visual_sandbox.py
env/: traffic_env.py
rl/: callbacks.py  diagnose_policy.py  evaluate.py  train.py
scripts/: run_phase1_multiseed.ps1
simulation/: intersection.py  lane.py  road.py  traffic_light.py  vehicle.py  vehicle_spawner.py
tests/: smoke_test_env.py
utils/: config.py
visualization/: pygame_renderer.py
